--- a/src/App.css
+++ b/src/App.css
@@ -90,13 +90,13 @@ h1 {
     line-height: 67px;
 }
 /* Heading 2 */
-h2 {
+/* h2 {
     font-size: 48px;
     font-weight: 700;
     line-height: 58px;
-}
+} */
 /* Heading 3 */
-h3 {
+h2 {
     font-size: 24px;
     font-weight: 700;
     line-height: 34px;
